--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,10 @@ input{
   align-items: center;
   margin-top:10%;
 }
+
+@media only screen and (max-width:600px ){
+  .card {
+    display: block;
+  }
+}
+
