--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,25 @@
-input{
-  border: 1px solid dodgerblue
+#picHead{
+  width: 100%;
+  height: 642px;
 }
 
-.container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top:10%;
+#head{
+   width: 100%;
+    height: 100px;
+    margin: 0px;
+    background-color:blue;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #eee;
 }
 
-@media only screen and (max-width:600px ){
-  .card {
-    display: block;
-  }
+.card{
+    width: 75%;
+    border: 1px solid black;
+    box-shadow: 2px 2px  5px blue;
+    margin: 10px 0px 0px 30px;
+    padding: 10px;
+    text-align: center;
 }
-
