moblie fixed again

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
     width: 75%;
     border: 1px solid black;
     box-shadow: 2px 2px  5px blue;
-    margin: 10px 0px 0px 30px;
+    margin: 20px auto;
     padding: 10px;
     text-align: center;
 }
