--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,62 @@
     padding: 10px;
     text-align: center;
 }
+
+ 
+
+@media only screen and (min-width: 992px) {
+  .card {
+    display: inline-block;
+    width: 500px;
+    margin: 10px;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .cards {
+    text-align: center;
+  }
+}
+
+@media only screen and (min-width: 2560px) {
+  .card {
+    display: block;
+    width: 800px;
+    margin: 10px;
+  }
+}
+
+@media only screen and (min-width: 2560px) {
+  .cards {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+
+/* Make sure that padding behaves as expected */
+* {box-sizing:border-box}
+
+/* Container for skill bars */
+.container {
+  width: 50%; /* Full width */
+  background-color: #ddd; /* Grey background */
+}
+
+.skills {
+  text-align: right; /* Right-align text */
+  padding-top: 10px; /* Add top padding */
+  padding-bottom: 10px; /* Add bottom padding */
+  color: white; /* White text color */
+}
+
+.html {width: 80%; background-color: #4CAF50;} /* Green */
+.css {width: 80%; background-color: #2196F3;} /* Blue */
+.js {width: 65%; background-color: #f44336;} /* Red */
+.php {width: 60%; background-color: #808080;} /* Dark Grey */
+.mysql {width:60%; background-color: rgb(218, 53, 218)}
+
+#skill{
+  position: relative;
+  left: 20%;
+}
