--- a/src/App.css
+++ b/src/App.css
@@ -73,16 +73,34 @@ h2{
   background-color: #ddd;
 }
 
-.html {width: 80%; background-color: #4CAF50;}
-.css {width: 80%; background-color: #2196F3;}
-.js {width: 65%; background-color: #e2d40e;}
-.react {width: 30%; background-color: #0b63bb}
-.php {width: 60%; background-color: #7710d8;}
-.mysql {width:60%; background-color: #da0c0c}
+.html {
+  width: 80%; background-color: #4CAF50;
+}
+
+.css {
+  width: 80%; background-color: #2196F3;
+}
+
+.js {
+  width: 65%; background-color: #e2d40e;
+}
+
+.react {
+  width: 30%; background-color: #0b63bb
+}
+
+.php {
+  width: 60%; background-color: #7710d8;
+}
+
+.mysql {
+  width:60%; background-color: #da0c0c;
+}
 
 #skill{
-  position: relative;
-  left: 20%;
+  width: 70%;
+  display: block;
+  margin: auto;
 }
 
 #certDiv{
@@ -95,11 +113,4 @@ h2{
   width: 300px;
 }
 
-p skillbar{
-  width: 5px;
-  margin: 0px;
-}
 
-body{
-  width: 100%;
-}
